hockeypuck (0.1~alpha) UNRELEASED; urgency=low

  [ Casey Marshall ]
  * === added directory debian, cmd/hockeypuck/main.go,
    server.go, server_test.go, types.go:
    - Opening 0.1~alpha development, create debian/changelog.
    - Added comments to server.
  * === added directory pq, pq/cr_database.sql, pq/dr_database.sql,
    pq/worker.go:
    - Add a first cut at a database schema, random uuid generation.
    - Started pq-backed worker.
  * pq/cr_database.sql, pq/worker.go:
    - Commented the database schema & outlined plan for PqWorker.AddKey.
  * pgp.go:
    - Added public key merge functions we'll need for keyserver updates.

 -- Casey Marshall <casey.marshall@gmail.com>  Mon, 20 Aug 2012 00:20:09 -0500